--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230321.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "miniflare": "^2.13.0",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.3",
     "vitest": "^0.29.8",
-    "wrangler": "2.13.0"
+    "vitest-environment-miniflare": "^2.13.0",
+    "wrangler": "^2.13.0"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint . --ext .ts,.js,.cjs,.mjs --fix",
+    "prettier": "prettier --check ."
+  },
+  "dependencies": {
+    "@hono/zod-validator": "^0.1.2",
+    "hono": "^3.1.5",
+    "zod": "^3.21.4"
   }
 }
