--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
 name = "turborepo-remote-cache-cf"
 main = "src/index.ts"
 compatibility_date = "2023-04-03"
+usage_model = 'bundled'
+
+[vars]
+ENVIRONMENT = 'production'
