--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "scripts": {
     "dev": "wrangler dev --local --persist",
+    "dev:scheduled": "wrangler dev --local --persist --test-scheduled",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint . --ext .ts,.js,.cjs,.mjs --fix",
