Improve README and fix type issue in cron deletion script

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,7 @@ ENVIRONMENT = 'production'
 # - TURBO_TOKEN (must a valid Bearer auth token)
 # Run `echo <VALUE> | wrangler secret put <NAME>` for each of these
 REQUIRE_AUTH = true
+BUCKET_OBJECT_EXPIRATION_HOURS = 720 # 30 days
 
 [[r2_buckets]]
 binding = 'R2_STORE'
