--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy to Cloudflare Workers
 
 on:
   repository_dispatch:
+  # Uncomment the following section to enable automatic deploys on push to master
+  # push:
+  #   branches: ['master']
 
 jobs:
   build-and-deploy:
