--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "turborepo-remote-cache-cf",
   "version": "0.0.0",
+  "type": "module",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -20,8 +21,8 @@
     "build": "wrangler publish --dry-run --outdir dist",
     "dev": "wrangler dev --local --persist",
     "dev:scheduled": "wrangler dev --local --persist --test-scheduled",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules vitest run",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules vitest",
     "lint": "eslint . --ext .ts,.js,.cjs,.mjs --fix",
     "prettier": "prettier --check .",
     "typecheck": "tsc --noEmit"
