--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,9 @@
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
   "pipeline": {
+    "build": {
+      "outputs": ["dist/**"]
+    },
     "typecheck": {
       "outputs": []
     },
