Setup internal route for manually triggering a cache delete

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,9 @@
 {
   "root": true,
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
-  "ignorePatterns": [
-    ".eslintrc.js"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
+  "ignorePatterns": [".eslintrc.js"],
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
