--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@cloudflare/workers-types": "^4.20230419.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-c8": "^0.31.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -21,7 +22,7 @@
     "build": "wrangler publish --dry-run --outdir dist",
     "dev": "wrangler dev --local --persist",
     "dev:scheduled": "wrangler dev --local --persist --test-scheduled",
-    "test": "NODE_OPTIONS=--experimental-vm-modules vitest run",
+    "test": "NODE_OPTIONS=--experimental-vm-modules vitest run --coverage",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules vitest",
     "lint": "eslint . --ext .ts,.js,.cjs,.mjs,.json --fix",
     "prettier": "prettier --check .",
