--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 100
 
 [*.{json,js,ts,tsx,jsx,mjs,cjs}]
 indent_size = 2
@@ -15,5 +16,5 @@ indent_size = 2
 [*.vue]
 indent_size = 2
 
-[*.yaml]
-indent_size = 4
+[*.{yml,yaml}]
+indent_size = 2
