--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: Deploy to Cloudflare Workers
 
 on:
   repository_dispatch:
-  push:
-    branches: ['master']
+  # Uncomment the following section to enable automatic deploys on push to master
+  # push:
+  #   branches: ['master']
 
 jobs:
   build-and-deploy:
@@ -24,9 +25,5 @@ jobs:
             echo "*** post commands ***"
             wrangler r2 bucket create turborepo-cache
             echo "******"
-          secrets: |
-            TURBO_TOKEN
-          command: publish
         env:
-          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN || 'TURBO_TOKEN_SECRET' }}
           CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
