Upgrade to wrangler v3 and miniflare v3

--- a/package.json
+++ b/package.json
@@ -6,24 +6,23 @@
     "@cloudflare/workers-types": "^4.20230511.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/coverage-c8": "^0.31.1",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "miniflare": "^2.14.0",
+    "miniflare": "^3.0.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
-    "vitest": "^0.31.0",
+    "vitest": "^0.31.1",
     "vitest-environment-miniflare": "^2.14.0",
-    "wrangler": "^2.20.0"
+    "wrangler": "^3.0.0"
   },
   "private": true,
   "scripts": {
-    "build": "wrangler publish --dry-run --outdir dist",
-    "dev": "wrangler dev --local --persist",
-    "dev:scheduled": "wrangler dev --local --persist --test-scheduled",
-    "test": "NODE_OPTIONS=--experimental-vm-modules vitest run --coverage",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules vitest",
+    "build": "wrangler deploy --dry-run --outdir dist",
+    "dev": "wrangler dev --test-scheduled",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest run --coverage",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest",
     "lint": "eslint . --ext .ts,.js,.cjs,.mjs,.json --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
