Upgrade eslint, prettier and wrangler to latest versions
 @cloudflare/workers-types         ^4.20230518.0  →  ^4.20230710.0
 @typescript-eslint/eslint-plugin        ^5.60.1  →         ^6.0.0
 @typescript-eslint/parser               ^5.60.1  →         ^6.0.0
 @vitest/coverage-v8                     ^0.32.2  →        ^0.33.0
 eslint                                  ^8.43.0  →        ^8.44.0
 eslint-plugin-prettier                   ^4.2.1  →         ^5.0.0
 hono                                     ^3.2.7  →         ^3.3.0
 miniflare                                ^3.0.2  →  ^3.20230710.0
 prettier                                 ^2.8.8  →         ^3.0.0
 vitest                                  ^0.32.2  →        ^0.33.0
 wrangler                                 ^3.1.1  →         ^3.2.0

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,17 @@
 {
   "root": true,
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": true
+  },
   "plugins": ["@typescript-eslint", "prettier"],
-  "ignorePatterns": [".eslintrc.js"],
+  "ignorePatterns": [".eslintrc.json"],
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
@@ -13,6 +21,7 @@
         "varsIgnorePattern": "^_",
         "destructuredArrayIgnorePattern": "^_"
       }
-    ]
+    ],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   }
 }
