--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
   "readme": "README.md",
   "type": "module",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitest/coverage-v8": "^0.32.2",
-    "eslint": "^8.43.0",
+    "@cloudflare/workers-types": "^4.20230710.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "miniflare": "^3.0.2",
-    "prettier": "^2.8.8",
+    "eslint-plugin-prettier": "^5.0.0",
+    "miniflare": "^3.20230710.0",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6",
-    "vitest": "^0.32.2",
+    "vitest": "^0.33.0",
     "vitest-environment-miniflare": "^2.14.0",
-    "wrangler": "^3.1.1"
+    "wrangler": "^3.2.0"
   },
   "private": true,
   "scripts": {
@@ -47,13 +47,13 @@
     "dev": "wrangler dev --test-scheduled",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest run --coverage",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest",
-    "lint": "eslint . --ext .ts,.js,.cjs,.mjs,.json --fix",
+    "lint": "eslint . --ext .ts,.js,.cjs,.mjs --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.3",
-    "hono": "^3.2.7",
+    "hono": "^3.3.0",
     "zod": "^3.21.4"
   },
   "packageManager": "yarn@3.6.0"
