Switch rangeStrategy to bump for renovate bot

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "dependencyDashboard": true
+  "dependencyDashboard": true,
+  "rangeStrategy": "bump"
 }
