--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@cloudflare/workers-types": "^4.20230814.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "miniflare": "^3.20230814.1",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6",
-    "vitest": "^0.33.0",
+    "vitest": "0.33.0",
     "vitest-environment-miniflare": "^2.14.0",
     "wrangler": "^3.5.1"
   },
