--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,12 @@ name: Deploy to Cloudflare Workers
 
 on:
   repository_dispatch:
-  # Uncomment the following section to enable automatic deploys on push to master
-  # push:
-  #   branches: ['master']
+  push:
+    branches: ['master']
+
+env:
+  CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+  CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
 
 jobs:
   build-and-deploy:
@@ -17,13 +20,11 @@ jobs:
           node-version: 18
           cache: 'yarn'
       - run: yarn install
-      - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+      - name: Deploy
+        uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
           preCommands: |
             echo "*** post commands ***"
             wrangler r2 bucket create turborepo-cache
             echo "******"
-        env:
-          CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
+          command: 'deploy'
