Default pre-commands for deploy to always succeed
This allows for us to commit the R2 bucket create into the workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
           wranglerVersion: 'latest'
           preCommands: |
             echo "*** post commands ***"
-            wrangler r2 bucket create turborepo-cache
+            wrangler r2 bucket create turborepo-cache || true
             echo "******"
           command: 'deploy'
