--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@cloudflare/workers-types": "^4.20230821.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "@vitest/coverage-v8": "0.33.0",
+    "@vitest/coverage-v8": "^0.34.3",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "miniflare": "^3.20230821.0",
     "prettier": "^3.0.2",
     "typescript": "^5.2.2",
-    "vitest": "0.33.0",
+    "vitest": "^0.34.3",
     "vitest-environment-miniflare": "^2.14.1",
     "wrangler": "^3.6.0"
   },
