Attempt to fix pnpm bug in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 18
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v2
       - run: pnpm install
       - run: pnpm lint
       - run: pnpm typecheck
