--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 18
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v2
       - run: pnpm install
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
