--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,11 @@ jobs:
     name: Build & Deploy
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'pnpm'
-      - run: pnpm install
+          cache: 'yarn'
+      - run: yarn install
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
