--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   repository_dispatch:
   push:
     branches: ['master']
+  pull_request:
+    branches: ['master']
 
 jobs:
   build-and-deploy:
