Upgrade engines to node 18 and attempt to disable renovate from updating engines

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,10 @@
       "matchUpdateTypes": ["minor", "patch"],
       "matchCurrentVersion": "!/^0/",
       "automerge": true
+    },
+    {
+      "matchPackagePatterns": ["^engines$"],
+      "enabled": false
     }
   ]
 }
