Try again to stop renovate from upgrading engines

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,7 +10,7 @@
       "automerge": true
     },
     {
-      "matchPackagePatterns": ["^engines$"],
+      "matchDepTypes": ["engines"],
       "enabled": false
     }
   ]
