--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,13 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - id: create_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.CHANGESETS_RELEASE_APP_ID }}
+          private_key: ${{ secrets.CHANGESETS_RELEASE_PRIVATE_KEY }}
+
       - name: Create Release Pull Request
         uses: changesets/action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.create_token.outputs.token }}
