Fix PR title for changesets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
         uses: changesets/action@v1
         with:
           commit: "chore(release): Release latest changesets"
+          title: "chore(release): Release latest changesets"
           createGithubReleases: true
           publish: echo 'noop'
         env:
