Revert "Try removing the R2 creation script in CI to see if it fixes the secrets deploy issue #217"
This reverts commit 5743a4b03985e5a615170dc6c17889ec983ebbd6.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
           accountId: ${{ secrets.CF_ACCOUNT_ID || secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CF_API_TOKEN || secrets.CLOUDFLARE_API_TOKEN }}
           wranglerVersion: 'latest'
-          # preCommands: |
-          #   echo "*** post commands ***"
-          #   wrangler r2 bucket create turborepo-cache || true
-          #   echo "******"
+          preCommands: |
+            echo "*** post commands ***"
+            wrangler r2 bucket create turborepo-cache || true
+            echo "******"
           secrets: |
             TURBO_TOKEN
           command: 'deploy'
