Finish basic docs

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -25,7 +25,7 @@ jobs:
       - run: pnpm install
       - run: pnpm docs:build
 
-      - name: Deploy arishi-website-webapp
+      - name: Deploy vitepress docs
         uses: cloudflare/wrangler-action@v3
         with:
           accountId: ${{ secrets.CF_ACCOUNT_ID || secrets.CLOUDFLARE_ACCOUNT_ID }}
