--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -4,12 +4,14 @@ on:
   workflow_run:
     workflows: ['CI']
     types: [completed]
+  pull_request:
+    branches: [master]
 
 jobs:
   check:
     name: Build and deploy Docs
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
 
