--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,6 +3,7 @@ name: Deploy Docs
 on:
   workflow_run:
     workflows: ['CI']
+    branches: [master]
     types: [completed]
   pull_request:
     branches: [master]
