--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,6 +29,7 @@ jobs:
       - run: pnpm docs:build
 
       - name: Deploy vitepress docs
+        id: deploy-docs
         uses: cloudflare/wrangler-action@v3
         with:
           accountId: ${{ secrets.CF_ACCOUNT_ID || secrets.CLOUDFLARE_ACCOUNT_ID }}
@@ -36,3 +37,28 @@ jobs:
           wranglerVersion: '3.23.0'
           packageManager: 'pnpm'
           command: pages deploy docs/.vitepress/dist/ --project-name=cloudflare-turbo-cache-docs
+
+      - name: Comment with deploy link
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const deploymentUrl = process.env.DEPLOYMENT_URL;
+            const commitHash = context.payload.pull_request.head.sha;
+            const status = 'Success'; // Assuming the status is always 'Success' when this runs, otherwise you need to set this dynamically
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `
+              # Deploying with Cloudflare Pages
+              | Name                    | Result |
+              | ----------------------- | ------ |
+              | **Last commit:**        | \`${commitHash.substring(0, 7)}\` |
+              | **Status**:             | ${status} |
+              | **Preview URL**:        | ${deploymentUrl} |
+              `
+            });
+        env:
+          DEPLOYMENT_URL: ${{ steps.deploy-docs.outputs.deployment-url }}
