--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,13 +3,16 @@ name: Deploy Docs
 on:
   workflow_run:
     workflows: ['CI']
+    branches: [master]
     types: [completed]
+  pull_request:
+    branches: [master]
 
 jobs:
   check:
     name: Build and deploy Docs
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
 
@@ -26,6 +29,7 @@ jobs:
       - run: pnpm docs:build
 
       - name: Deploy vitepress docs
+        id: deploy-docs
         uses: cloudflare/wrangler-action@v3
         with:
           accountId: ${{ secrets.CF_ACCOUNT_ID || secrets.CLOUDFLARE_ACCOUNT_ID }}
@@ -33,3 +37,28 @@ jobs:
           wranglerVersion: '3.23.0'
           packageManager: 'pnpm'
           command: pages deploy docs/.vitepress/dist/ --project-name=cloudflare-turbo-cache-docs
+
+      - name: Comment with deploy link
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const deploymentUrl = process.env.DEPLOYMENT_URL;
+            const commitHash = context.payload.pull_request.head.sha;
+            const status = '✅  Deploy successful!'
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `
+              # 🌩 Deploying with Cloudflare Pages
+              | Name                    | Result |
+              | ----------------------- | ------ |
+              | **Last commit:**        | \`${commitHash.substring(0, 7)}\` |
+              | **Status**:             | ${status} |
+              | **Preview URL**:        | ${deploymentUrl} |
+              `
+            });
+        env:
+          DEPLOYMENT_URL: ${{ steps.deploy-docs.outputs.deployment-url }}
