(fix): Run eslint on all valid files

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "deploy": "wrangler deploy",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest run --coverage",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest",
-    "lint": "eslint . --ext .ts,.js,.cjs,.mjs --fix && prettier --check .",
+    "lint": "eslint . && prettier --check .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "docs:dev": "vitepress dev docs",
