--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@cloudflare/workers-types": "^4.20240208.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
