--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "pnpm": ">=8"
   },
   "scripts": {
-    "build": "wrangler deploy --dry-run --outdir dist",
+    "build": "wrangler deploy --dry-run --minify --outdir dist",
     "dev": "wrangler dev --test-scheduled",
     "deploy": "wrangler deploy",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest run --coverage",
+    "test:ui": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest --coverage --ui",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest",
     "lint": "eslint . && prettier --check .",
     "format": "prettier --write .",
@@ -45,17 +46,21 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@cloudflare/workers-types": "^4.20240208.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "miniflare": "^3.20240129.1",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitepress": "1.0.0-rc.42",
     "vitest": "^1.2.2",
     "vitest-environment-miniflare": "^2.14.2",
@@ -63,7 +68,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.11",
-    "hono": "^4.0.0",
+    "hono": "^4.0.1",
     "zod": "^3.22.4"
   },
   "pnpm": {
