Pin node version for volta

--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
       "@types/node": "20.12.11"
     }
   },
-  "packageManager": "pnpm@9.1.1"
+  "packageManager": "pnpm@9.1.1",
+  "volta": {
+    "node": "20.13.1"
+  }
 }
