--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "build": "wrangler deploy --dry-run --minify --outdir dist",
     "dev": "wrangler dev --test-scheduled",
     "deploy": "wrangler deploy",
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest run --coverage",
-    "test:ui": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest --coverage --ui",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 vitest",
+    "test": "vitest run --coverage",
+    "test:ui": "vitest --coverage --ui",
+    "test:watch": "vitest",
     "lint": "eslint . && prettier --check .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
@@ -48,12 +48,13 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
+    "@cloudflare/vitest-pool-workers": "^0.4.12",
     "@cloudflare/workers-types": "^4.20240712.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
-    "@vitest/coverage-v8": "^2.0.3",
-    "@vitest/ui": "^2.0.3",
+    "@vitest/coverage-istanbul": "1.5.3",
+    "@vitest/ui": "1.5.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -62,8 +63,7 @@
     "typescript": "^5.5.3",
     "vite-tsconfig-paths": "^4.3.2",
     "vitepress": "1.3.1",
-    "vitest": "^2.0.3",
-    "vitest-environment-miniflare": "^2.14.2",
+    "vitest": "1.5.3",
     "wrangler": "^3.65.0"
   },
   "dependencies": {
