--- a/wrangler.vitest.toml
+++ b/wrangler.vitest.toml
@@ -3,6 +3,8 @@ main = "src/index.ts"
 compatibility_date = "2024-04-05"
 usage_model = 'bundled'
 
+compatibility_flags = [ "nodejs_compat" ]
+
 [vars]
 ENVIRONMENT = 'production'
 # - TURBO_TOKEN (must a valid Bearer auth token)
