fix: renovate config for vitest

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,7 @@
       "enabled": false
     },
     {
-      "matchPackageNames": ["vitest", "@vitest/*"],
+      "matchPackagePatterns": ["vitest", "@vitest/*"],
       "enabled": false
     }
   ]
