--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "miniflare": "^3.20240718.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.1",
+    "typescript-eslint": "^8.0.0-alpha.47",
     "vite-tsconfig-paths": "^4.3.2",
     "vitepress": "1.3.1",
     "vitest": "1.5.3",
