--- a/package.json
+++ b/package.json
@@ -47,19 +47,21 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
-    "@cloudflare/vitest-pool-workers": "^0.4.12",
+    "@cloudflare/vitest-pool-workers": "^0.4.13",
     "@cloudflare/workers-types": "^4.20240718.0",
+    "@eslint/js": "^9.7.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
+    "@types/eslint": "^8.56.10",
+    "@types/eslint__js": "^8.42.3",
     "@vitest/coverage-istanbul": "1.5.3",
     "@vitest/ui": "1.5.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "miniflare": "^3.20240718.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.0-alpha.47",
     "vite-tsconfig-paths": "^4.3.2",
     "vitepress": "1.3.1",
     "vitest": "1.5.3",
