--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "wrangler": "^3.72.0"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.2.2",
+    "@hono/valibot-validator": "^0.3.0",
     "hono": "^4.5.6",
-    "zod": "^3.23.8"
+    "valibot": "^0.37.0"
   },
   "pnpm": {
     "overrides": {
