chore: Update packages, compatibility_date and enable observibility on the worker

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
             echo "******"
           secrets: |
             TURBO_TOKEN
-          command: 'deploy --minify'
+          command: deploy --minify
