--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "scripts": {
     "build": "wrangler deploy --dry-run --minify --outdir dist",
+    "build-with-meta": "esbuild src/index.ts --bundle --outfile=build/esbuild-worker/index.js --minify --external:cloudflare:workers --metafile=build/esbuild-worker/meta.json",
     "dev": "wrangler dev --test-scheduled",
     "deploy": "wrangler deploy --minify",
     "test": "vitest run --coverage",
@@ -55,6 +56,7 @@
     "@types/eslint__js": "^8.42.3",
     "@vitest/coverage-istanbul": "2.1.3",
     "@vitest/ui": "2.1.3",
+    "esbuild": "^0.24.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
