Refresh lockfile and support pnpm v10

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.12",
-    "@cloudflare/vitest-pool-workers": "^0.6.12",
+    "@cloudflare/vitest-pool-workers": "^0.6.14",
     "@cloudflare/workers-types": "^4.20250204.0",
     "@eslint/js": "^9.20.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -57,17 +57,17 @@
     "@vitest/coverage-istanbul": "2.1.9",
     "@vitest/ui": "2.1.9",
     "esbuild": "^0.25.0",
-    "eslint": "^9.20.0",
+    "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "miniflare": "^3.20250129.0",
+    "miniflare": "^3.20250204.0",
     "prettier": "^3.5.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0",
+    "typescript-eslint": "^8.24.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitepress": "1.6.3",
     "vitest": "2.1.9",
-    "wrangler": "^3.107.3"
+    "wrangler": "^3.108.1"
   },
   "dependencies": {
     "@hono/valibot-validator": "^0.5.2",
@@ -77,7 +77,12 @@
   "pnpm": {
     "overrides": {
       "@types/node": "22.13.1"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp",
+      "workerd"
+    ]
   },
   "packageManager": "pnpm@10.3.0"
 }
