--- a/.ncurc.json
+++ b/.ncurc.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://raw.githubusercontent.com/raineorshine/npm-check-updates/main/src/types/RunOptions.json",
   "root": true,
-  "reject": []
+  "reject": ["@vitest/coverage-istanbul", "@vitest/ui", "vitest"]
 }
