--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "scripts": {
-    "build": "wrangler deploy --dry-run --minify --outdir dist",
-    "build-with-meta": "esbuild src/index.ts --bundle --outfile=build/esbuild-worker/index.js --minify --external:cloudflare:workers --metafile=build/esbuild-worker/meta.json",
-    "dev": "wrangler dev --test-scheduled",
-    "deploy": "wrangler deploy --minify",
+    "build": "vite build",
+    "dev": "vite",
+    "preview": "vite preview",
+    "deploy": "wrangler deploy",
     "test": "vitest run --coverage",
     "test:ui": "vitest --coverage --ui",
     "test:watch": "vitest",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.28.1",
+    "@cloudflare/vite-plugin": "^0.1.19",
     "@cloudflare/vitest-pool-workers": "^0.8.8",
     "@cloudflare/workers-types": "^4.20250327.0",
     "@eslint/js": "^9.23.0",
@@ -55,14 +56,15 @@
     "@types/eslint": "^9.6.1",
     "@vitest/coverage-istanbul": "3.0.9",
     "@vitest/ui": "3.0.9",
-    "esbuild": "^0.25.1",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "miniflare": "^4.20250321.1",
     "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
+    "vite": "^6.2.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitepress": "1.6.3",
     "vitest": "3.0.9",
@@ -74,9 +76,6 @@
     "valibot": "^1.0.0"
   },
   "pnpm": {
-    "overrides": {
-      "@types/node": "22.13.14"
-    },
     "onlyBuiltDependencies": [
       "esbuild",
       "sharp",
