--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 100
 
-[*.{json,js,ts,tsx,jsx,mjs,cjs}]
+[*.{json,jsonc,js,ts,tsx,jsx,mjs,cjs}]
 indent_size = 2
 
 [*.vue]
