fix: Return bearer middleware result instead of awaiting
- Fix bearerAuth middleware usage in internal and artifacts routes by
returning the middleware result instead of just awaiting it
- Add vitest packages to renovate ignore list to sync with .ncurc.json

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,6 +13,11 @@
     {
       "matchDepTypes": ["engines"],
       "enabled": false
+    },
+    {
+      "description": "Ignored packages (synced with .ncurc.json)",
+      "matchPackageNames": ["vitest", "@vitest/ui", "@vitest/coverage-istanbul"],
+      "enabled": false
     }
   ]
 }
