--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "typescript-eslint": "^8.53.0",
     "vite": "^7.3.1",
     "vite-tsconfig-paths": "^6.0.4",
-    "vitepress": "1.6.4",
+    "vitepress": "2.0.0-alpha.15",
     "vitest": "^3.2.4",
     "wrangler": "^4.59.2"
   },
