--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "@hono/valibot-validator": "^0.6.1",
     "hono": "^4.11.5",
+    "s3mini": "^0.9.1",
     "valibot": "^1.2.0"
   },
   "pnpm": {
